name: haskell-chat-server
version: 1.0.0
build-type: Simple
-- author:
maintainer:          alex+haskell@eightbits.com
cabal-version: >=1.10
executable haskell-chat-server
    main-is: Main.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:  base >=4.6,
                    network >=2.6
    default-language: Haskell2010
